bolded fonts a bit and made sans slightly larger. still need to fix a few potential issues such as long words with lots of Ws and Ms may overlap with sans fonts. maybe need a way to dynamically calculate size.

--- a/djAerolith/wordwalls/static/css/wordwalls/wordwallsTableSS.css
+++ b/djAerolith/wordwalls/static/css/wordwalls/wordwallsTableSS.css
@@ -401,14 +401,23 @@ span.tile7
 span.tilemono
 {
     font-size: 160%;
-    font-weight: lighter;
+    font-weight: 600;
     font-family: monospace;
 }
 
 span.tilesans
 {
-    font-size: 120%;
-    font-family: Verdana, sans-serif;
+    font-size: 130%;
+    font-weight: 600;
+    font-family: arial, geneva, helvetica, helv, sans-serif;
+}
+
+#Test
+{
+    position: absolute;
+    visibility: hidden;
+    height: auto;
+    width: auto;
 }
 
 span.chip
